last Edit to services

--- a/css/style.css
+++ b/css/style.css
@@ -284,12 +284,12 @@ header .container .nav .search{
 }
 .services-content .content .words h3{
     color: #19c8fa;
-    margin: 0  0 30px 20px;
+    margin: 5px  0 30px 45px;
 }
 .services-content .content .words p{
     color: #777;
     line-height: 1.8;
-    margin: 0 0 30px 20px;
+    margin: 0 0 30px 45px;
 }
 .services-content .content .word{
     margin-bottom: 150px;
