--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,9 @@
     .services .container .services-content .content h3{
         margin: 30px 0 30px 0;
     }
+    .design .imgdesign{
+        display: none;
+    }
 }
 /* Small */
 
@@ -229,7 +232,7 @@ header .container .nav .search{
 /* End Landing */
 /* Start Services */
 .services{
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 100px;
     padding-bottom: 100px;
     position: relative;
@@ -295,7 +298,57 @@ header .container .nav .search{
     line-height: 1.8;
     margin: 0 0 30px 0px !important;
 }
-.services-content .content .word{
-    margin-bottom: 150px;
-}
+
 /* End Services */
+/* Start Design */
+.design{
+    background-image: url(../images/design-features.jpg);
+    background-size: cover;
+    height: 600px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    overflow: hidden
+}
+.design::before{
+    content: "";
+    background-color: rgb(0 0 0 / 62%);
+    height: 600px;
+    position: absolute;
+    left: 0%;
+    width: 100%;
+}
+
+
+.design .design-content{
+    background-color: rgb(33 158 177 / 60%);
+    padding: 50px;
+    color: white;
+    z-index: 2;
+}
+
+.design .design-content h3{
+    font-weight: 400;
+    font-size: 23px;
+    margin-bottom: 50px;
+}
+.design .design-content , .design .imgdesign {
+    flex: 1;
+    position: relative;
+}
+.design .imgdesign {
+    text-align: center;
+}
+.design .imgdesign img{
+    position: relative;
+    bottom: -180px;
+}
+.design .design-content .responsive p{
+    margin-left: 20px;
+    display: inline-block;
+}
+.design .design-content .responsive{
+    padding: 15px 0;
+}
+/* End Design */
