--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@
         margin: 0 0 46px 0px;
         padding: 0 21px;
     }
+    .stats .container .box{
+        flex-basis: 100%;
+    }
 }
 @media (max-width:975px){
     .services .container .services-content .content{
@@ -64,6 +67,11 @@
         display: none;
     }
 }
+@media (max-width: 1199px){
+    .stats .container .box{
+        margin-bottom: 50px;
+    }
+}
 /* Small */
 
 @media (min-width: 768px){
@@ -76,6 +84,9 @@
     .portifolio .box{
         flex-basis: 50%;
     }
+    .stats .container .box{
+        flex-basis: 50%;
+    }
 }
  
 /* Medium */
@@ -84,6 +95,7 @@
     .container{
         width: 970px;
     }
+
 }
 
 /* Large */
@@ -93,6 +105,10 @@
         width: 1170px;
     }
     .portifolio .box{
+        flex-basis: 25%;
+    }
+
+    .stats .container .box{
         flex-basis: 25%;
     }
 }
@@ -519,11 +535,11 @@ bottom: 0% !important;
 /* End Awesome */
 /* Start About */
 .about{
-    min-height: 90vh;
+    min-height: 80vh;
     padding-top: 100px;
     position: relative;
     overflow: hidden;
-    padding-bottom: 100px;
+    text-align: center;
 }
 .about .container .largetext{
     display: flex;
@@ -566,10 +582,53 @@ bottom: 0% !important;
     margin: 70px auto;
     line-height: 2;
 }
-.about .container .largetext img{
-    position: absolute;
-    bottom: -19%;
-    left: 50%;
-    transform: translateX(-50%);
+.about .container  img{
+    position: relative;
+    max-width: 100%;
+    margin-top: -80px;
+    margin-bottom: -150px;
+    bottom: -120px;
 }
 /* End About */
+/* Start Stats */
+.stats{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-image: url(../images/stats.png);
+    background-size: cover;
+    position: relative;
+    text-align: center;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+.stats::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+    left: 0%;
+    top: 0%;
+}
+.stats .container{
+    background-color: rgb(14 136 169 / 56%);
+    z-index: 2;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px 50px;
+    color: white;
+
+    padding: 50px 24px;
+    position: relative;
+}
+.stats .container .box i{
+    background-color: black;
+    border-radius: 50%;
+    padding: 10px;
+    margin-bottom: 25px;
+}
+.stats .container .box h3{
+    margin-bottom: 25px;
+    font-size: 50px;
+}
+/* End Stats */
