--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     font-family: "Open Sans", sans-serif;
     --mainColor: #19c8fa;
     --transparent-color: rgb(15 116 143 / 70%);
+    scroll-behavior: smooth;
 }
 /* Start Global Settings */
 .container{
@@ -111,7 +112,10 @@
     .container{
         width: 970px;
     }
-
+    .skills .box-of-skill .testimonials,
+    .skills .box-of-skill .testskills{
+        flex-basis: 45%;
+    }
 }
 
 /* Large */
@@ -648,3 +652,168 @@ bottom: 0% !important;
     font-size: 50px;
 }
 /* End Stats */
+/* Start Skills */
+.skills{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.skills .box-of-skill{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.skills .box-of-skill .testimonials h3{
+    text-align: center;
+    font-weight: normal;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.skills .box-of-skill .testimonials p{
+    color: #777;
+    margin-top: 10px;
+    line-height: 1.8;
+    text-align: center;
+}
+.skills .box-of-skill .box-of-testimonials{
+margin-top: 40px;
+display: flex;
+}
+.skills .box-of-skill .box-of-testimonials:last-of-type{
+    margin-bottom: 30px;
+}
+.skills .box-of-skill .box-of-testimonials img{
+    height:100px;
+    border-radius: 50%;
+    margin-right: 50px;
+}
+.skills .box-of-skill .box-of-testimonials .textplace{
+    border-bottom: 1px solid #DDDDDD;
+}
+.skills .box-of-skill .box-of-testimonials .textplace h4{
+    font-weight: normal;
+    line-height: 1.7;
+    margin-bottom: 10px;
+}
+.skills .box-of-skill .box-of-testimonials p{
+    text-align: right;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+.skills .box-of-skill .testimonials ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.skills .box-of-skill .testimonials ul li{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #CCCCCC;
+    margin-right: 5px;
+}
+.skills .box-of-skill .testimonials ul .active{
+    background-color: #19c8fa;
+}
+.skills .box-of-skill .testskills{
+    position: relative;
+}
+.skills .box-of-skill .testskills h3{
+    text-align: center;
+    font-weight: normal;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.skills .box-of-skill .testskills > p{
+    color: #777;
+    margin-top: 10px;
+    line-height: 1.8;
+    text-align: center;
+}
+.skills .box-of-skill .testskills .box-of-skills{
+    margin-top: 50px;
+}
+.skills .box-of-skill .testskills .box-of-skills span{
+    width: 100%;
+    height: 30px;
+    background-color: #dedadc;
+    display: block;
+    margin-top: 10px;
+    position: relative;
+}
+.skills .box-of-skill .testskills .box-of-skills span::before{
+    position: absolute;
+    left: 0%;
+    content: "";
+    height: 100%;
+    background-color: #19c8fa;
+}
+.skills .box-of-skill .testskills .box-of-skills .span1::before{
+    width: 90%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span2::before{
+    width: 85%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span3::before{
+    width: 80%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span4::before{
+    width: 90%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span1 .number{
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    display: block;
+    margin-top: 10px;
+    position: relative;
+
+}
+.skills .box-of-skill .testskills .box-of-skills span .number::before{
+    position: absolute;
+
+    color: white;
+    background-color: black;
+    padding: 5px;
+    border-radius: 10%;
+    top: -121%;
+}
+.skills .box-of-skill .testskills .box-of-skills span .number::after{
+    content: "";
+    position: absolute;
+    border-style: solid solid solid;
+    border-color: black transparent transparent transparent;
+    border-width: 7px;
+    top: -35%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span1 .number::before{
+    content: "90%";
+    right: 6%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span2 .number::before{
+    content: "85%";
+    right: 11%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span3 .number::before{
+    content: "80%";
+    right: 16%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span4 .number::before{
+    content: "90%";
+    right: 6%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span1 .number::after{
+    right: 9%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span2 .number::after{
+    right: 14%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span3 .number::after{
+    right: 19%;
+}
+.skills .box-of-skill .testskills .box-of-skills .span4 .number::after{
+    right: 9%;
+}
+/* End Skills */
